hard-gists/922973/run.log
=== Docker Run Log for 922973 ===
Started at: Mi 29. Okt 18:22:05 CET 2025

[2025-10-29 18:22:06] START: Running container for 922973
[2025-10-29 18:22:06] SUCCESS: Container ee996d7f1bae67042b2340fc930b12429056595b4c27bef05cdad157847e64fa started for 922973
=== Container logs for 922973 ===
  File "/snippet.py", line 25
    except RiakError, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 922973 ===
[2025-10-29 18:22:08] INFO: Container ee996d7f1bae67042b2340fc930b12429056595b4c27bef05cdad157847e64fa has stopped
